feat: Update condition handling to use string-based IDs for status effects and weapon types, enhancing moddability. Added test fixtures for consistent testing of effects and weapon types.